--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "displayName": "BranchAI",
   "description": "AI-powered Git branch name generator for VSCode",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Plong-Wasin/vscode-ai-branch-namer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Plong-Wasin/vscode-ai-branch-namer/issues"
+  },
+  "homepage": "https://github.com/Plong-Wasin/vscode-ai-branch-namer#readme",
+  "license": "MIT",
   "engines": {
     "vscode": "^1.108.1"
   },
