feat(config): add reasoning effort configuration option
Add support for configuring reasoning effort parameter for AI models
that support extended thinking (e.g., gpt-5.1, gpt-5-pro). This allows
users to control the trade-off between response speed, quality, and cost.

- Added `reasoningEffort` configuration with values: none, minimal, low,
  medium, high, xhigh
- Implemented model-specific defaults: gpt-5.1 defaults to 'none',
  gpt-5-pro defaults to 'high', others default to 'medium'
- Enhanced configuration validation to report invalid values
- Updated AI service to include reasoning_effort in API requests
- Added comprehensive test coverage for configuration loading and
  validation
- Updated documentation with configuration details and examples

--- a/package.json
+++ b/package.json
@@ -85,6 +85,13 @@
           "maximum": 10,
           "description": "Number of branch name suggestions to generate (1-10)",
           "order": 6
+        },
+        "branchai.reasoningEffort": {
+          "type": "string",
+          "default": "medium",
+          "enum": ["none", "minimal", "low", "medium", "high", "xhigh"],
+          "description": "Reasoning effort for models that support extended thinking (e.g., gpt-5.1, gpt-5-pro). Controls the amount of reasoning tokens used. Higher values produce more thoughtful responses but take longer and cost more.",
+          "order": 7
         }
       }
     }
